--- a/index.html
+++ b/index.html
@@ -142,5 +142,6 @@
         
       </footer>
     <script type="module" src="js/script.js"></script>
+    <script src="js/menu.js" ></script>
 </body>
 </html>
