função para limpar carrinho implementada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
         <header  id="topo">
-            <h1 class="inline">Coders Academy</h1>
+            <h1 class="inline">CS Treinamentos</h1>
             <nav id="navbar"  class="navbar ">
                 <ul class="nav-list inline">
                   <li><a href="index.html">Início</a></li>
